--- a/source/package/components/com_xiveirm/administrator/assets/css/xiveirm.css
+++ b/source/package/components/com_xiveirm/administrator/assets/css/xiveirm.css
@@ -1,10 +1,10 @@
-.icon-48-irmmasterdatas {
-      background-image: url(../images/l_irmmasterdatas.png);
+.icon-48-irmcustomers {
+      background-image: url(../images/l_irmcustomers.png);
       padding-left:60px!important;
 }
 
-.icon-48-irmmasterdata {
-      background-image: url(../images/l_irmmasterdatas.png);
+.icon-48-irmcustomer {
+      background-image: url(../images/l_irmcustomers.png);
       padding-left:60px!important;
 }
 
