--- a/source/package/components/com_xiveirm/administrator/models/forms/option.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/option.xml
@@ -2,67 +2,49 @@
 <form>
 	<fieldset>
 		<field name="id" type="text"
-			default="0"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_ID"
-			readonly="true" class="readonly"
 			description="JGLOBAL_FIELD_ID_DESC"
-		/>
-
-		<field name="client_id" type="text"
-			size="40"
-			class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_OPTION_CLIENT_ID"
-			description="COM_XIVEIRM_FORM_DESC_OPTION_CLIENT_ID"
 			default="0"
-			filter="safehtml"
-		/>
+			readonly="true" class="readonly" />
 
-		<field name="category" type="sql"
-			class="inputbox"
+		<field name="client_id" type="usergroup"
+			label="COM_XIVEIRM_FORM_LBL_OPTION_USERGROUP"
+			description="COM_XIVEIRM_FORM_DESC_OPTION_USERGROUP"
+			default="0"
+			filter="raw" />
+
+		<field name="category" type="sql" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_CATEGORY"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_CATEGORY"
 			query="SELECT 0 AS `id`, '- Select Category -' AS `name` UNION SELECT `id`, `name` FROM `#__xiveirm_option_categories`"
-			key_field="id" value_field="name"
-		/>
+			key_field="id" value_field="name" />
 
-		<field name="opt_key" type="text"
-			size="40"
-			class="inputbox"
+		<field name="opt_key" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_OPT_KEY"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_OPT_KEY"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="opt_value" type="text"
-			size="40"
-			class="inputbox"
+		<field name="opt_value" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_OPT_VALUE"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_OPT_VALUE"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
-		<field name="opt_name" type="text"
-			size="40"
-			class="inputbox"
+		<field name="opt_name" type="text" size="40" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_OPT_NAME"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_OPT_NAME"
-			filter="safehtml"
-		/>
+			filter="safehtml" />
 
 		<field name="access" type="accesslevel"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_ACCESS"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_ACCESS"
-			filter="raw"
-		/>
+			filter="raw" />
 
 		<field name="filter_access" type="accesslevel"
-			onchange="this.form.submit();"
-		/>
+			onchange="this.form.submit();" />
 
 		<field name="access" type="accesslevel"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_ACCESS"
 			description="COM_XIVEIRM_FORM_DESC_OPTION_ACCESS"
-			filter="raw"
-		/>
+			filter="raw" />
 	</fieldset>
 </form>
