maintenance kick optionscategories

--- a/source/package/components/com_xiveirm/administrator/models/forms/contact.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/contact.xml
@@ -37,14 +37,15 @@
 		<field name="catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
-			extension="com_xiveirm.contacts.catid"
-			show_root="1"
-			filter="raw" />
+			extension="com_xiveirm.contacts"
+			filter="raw">
+				<option value="0">JOPTION_SELECT_CATEGORY</option>
+		</field>
 
 		<field name="filter_catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
-			extension="com_xiveirm.contacts.catid"
+			extension="com_xiveirm.contacts"
 			show_root="1"
 			onchange="this.form.submit();" />
 
