--- a/source/package/components/com_xiveirm/administrator/models/forms/option.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/option.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
 	<fieldset>
-		<field name="id" type="text"
+		<field name="id" type="text" class="readonly"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_ID"
 			description="JGLOBAL_FIELD_ID_DESC"
 			default="0"
-			readonly="true" class="readonly" />
+			readonly="true" />
 
 		<field name="client_id" type="usergroup"
 			label="COM_XIVEIRM_FORM_LBL_OPTION_USERGROUP"
