--- a/source/package/components/com_xiveirm/administrator/models/forms/option.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/option.xml
@@ -14,9 +14,9 @@
 			filter="raw" />
 
 		<field name="catid" type="category"
-			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
-			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
-			extension="com_xiveirm.options"
+			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATEGORY"
+			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATEGORY"
+			extension="com_xiveirm.options.catid"
 			filter="raw">
 				<option value="0">JOPTION_SELECT_CATEGORY</option>
 		</field>
@@ -24,7 +24,7 @@
 		<field name="filter_catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
-			extension="com_xiveirm.options"
+			extension="com_xiveirm.options.catid"
 			show_root="1"
 			onchange="this.form.submit();" />
 
