--- a/source/package/components/com_xiveirm/site/models/forms/contactform.xml
+++ b/source/package/components/com_xiveirm/site/models/forms/contactform.xml
@@ -35,7 +35,7 @@
 			default=""
 			hidden="true" />
 
-		<field name="catid" type="category"
+		<field name="catid" type="category" class="span6"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATEGORY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATEGORY"
 			extension="com_xiveirm.contacts"
