--- a/source/package/components/com_xiveirm/administrator/models/forms/option.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/option.xml
@@ -50,5 +50,10 @@
 
 		<field name="filter_access" type="accesslevel"
 			onchange="this.form.submit();" />
+
+		<field name="access" type="accesslevel"
+			label="COM_XIVEIRM_FORM_LBL_OPTION_ACCESS"
+			description="COM_XIVEIRM_FORM_DESC_OPTION_ACCESS"
+			filter="raw" />
 	</fieldset>
 </form>
